--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Flask==0.10.1
+Flask-Admin==1.0.6
 Flask-OAuth==0.12
 Flask-WTF==0.8.4
 Jinja2==2.7
@@ -12,15 +13,20 @@ billiard==2.7.3.31
 boto==2.9.9
 celery==3.0.21
 celery-with-redis==3.0
+distribute==0.6.27
 flask-mongoengine==0.7.0
 httplib2==0.8
+importlib==1.0.2
 itsdangerous==0.22
 kombu==2.5.12
 mongoengine==0.8.3
 numpy==1.7.1
 oauth2==1.5.211
+ordereddict==1.1
 pymongo==2.5.2
 python-dateutil==2.1
 redis==2.7.6
+requests==1.2.3
 six==1.3.0
+unittest2==0.5.1
 wsgiref==0.1.2
