--- a/.ebextensions/trailio.config
+++ b/.ebextensions/trailio.config
@@ -1,3 +1,6 @@
 option_settings:
   "aws:elasticbeanstalk:container:python:staticfiles":
     "/static/": "static/"
+packages:
+  yum:
+    libjpeg-devel: []
