--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Flask-OAuth==0.12
 Flask-WTF==0.8.4
 Jinja2==2.7
 MarkupSafe==0.18
-Pillow==2.1.0
+PIL==1.1.7
 WTForms==1.0.4
 Werkzeug==0.9.3
 amqp==1.0.13
